2010-05-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* qemu_vfat/Makefile, qemu_vfat/README, qemu_vfat/init.c: Now includes
	a start_test example which parses arguments.
	* qemu_vfat/start_test.c: New file.

2010-05-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* qemu_vfat/.cvsignore, qemu_vfat/Makefile, qemu_vfat/README,
	qemu_vfat/init.c, qemu_vfat/system.h: New files.

2010-04-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* x86_display_cpu/Makefile, x86_display_cpu/test.c: Clean up.

2010-04-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* x86_display_cpu/.cvsignore, x86_display_cpu/Makefile,
	x86_display_cpu/test.c: New files.

2010-04-08	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* Makefile: Do not build adamain automatically until there is a way to
	know if the Ada support was built.

2009-12-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add adamain test. This is a strictly C version of the
	startup code for a GNAT Ada application. If this does not run, then
	Ada code has no prayer of running.
	* adamain/.cvsignore, adamain/Makefile, adamain/README,
	adamain/adacode.c, adamain/rtems_init.c: New files.

2009-10-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* applib/Makefile, applib/file_1.c, applib/private.h,
	applib/userLib.h: New files.

2009-09-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add example for extracting values from RTEMS Application
	Makefile infrastructure.
	* extract_example/.cvsignore, extract_example/Makefile,
	extract_example/README: New files.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add new program to demonstrate use of BSP command line
	arguments.
	* bspcmdline/.cvsignore, bspcmdline/Makefile, bspcmdline/README,
	bspcmdline/test.c: New files.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* minimum/test.c: Remove warning.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog: New file.
