@@ -6,7 +6,7 @@ include $(RTEMS_MAKEFILE_PATH)/Makefile.inc
 include $(RTEMS_CUSTOM)
 include $(RTEMS_ROOT)/make/directory.cfg
 
-SUBDIRS=minimum bspcmdline extract_example
+SUBDIRS=minimum bspcmdline extract_example nanosecond_tick_wrap
 
 # If the POSIX API isn't enabled, we can't build these
 ifeq ($(RTEMS_HAS_POSIX_API),yes)
